objects/Case.object
<CustomObject>
    <fields>
        <fullName>PMC_SS_CustomerWaivedCostsDetails__c</fullName>
        <label>Customer Waived Costs Details</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Demurrage</fullName>
                </value>
                <value>
                    <fullName>Despatch</fullName>
                </value>
                <value>
                    <fullName>Diversion Fee</fullName>
                </value>
                <value>
                    <fullName>Reconsignment Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_CustomerWaivedLevel1Cost__c</fullName>
        <inlineHelpText>To total &apos;Customer Waived Costs&apos; for Parent Quality and Non-Quality</inlineHelpText>
        <label>Customer Waived Level 1 Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CustomerWaivedLevel2Cost__c</fullName>
        <inlineHelpText>To total &apos;Customer Waived Costs&apos; for Child Quality and Non-Quality</inlineHelpText>
        <label>Customer Waived Level 2 Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CustomerWaivedLevel3Cost__c</fullName>
        <label>Customer Waived Level 3 Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Date_Investigation_Sent_to_CS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Investigation Sent to CS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_DaysOfDemurrage_c__c</fullName>
        <description>Field displayed when Issue Reason selected is &quot;Demurrage&quot; to enter the number of days of demurrage.</description>
        <label>Days of Demurrage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_DebitAmount__c</fullName>
        <label>Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Delivery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery</label>
        <referenceTo>Shipment</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Document__c</fullName>
        <description>Select the document they want to request when Issue Reason &quot;Document Request&quot; is selected.</description>
        <label>Document</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BOL</fullName>
                </value>
                <value>
                    <fullName>COA</fullName>
                </value>
                <value>
                    <fullName>COO</fullName>
                </value>
                <value>
                    <fullName>COW</fullName>
                </value>
                <value>
                    <fullName>Data Sheet</fullName>
                </value>
                <value>
                    <fullName>Hazmat Label</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>SDS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_DollarAmount__c</fullName>
        <label>Dollar Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Easy_Checklist_Sent__c</fullName>
        <label>Easy Checklist Sent?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_EquipmentInspected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Toggle box checked when pertinent equipment (railcar, vessel, barge, truck) has been requested to be inspected</description>
        <label>Equipment Inspected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_FirstLevelApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To determine if case has gone through first level approval</description>
        <label>First Level Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_HyperLinkFormula__c</fullName>
        <formula>IF(AND(ISPICKVAL( Type , &apos;Product&apos;),ISPICKVAL( PMC_SS_IssueReason__c , &apos;Product Request&apos;)), HYPERLINK($Label.PMC_SS_SAPProductRequest_FioriLink,  &apos;Product Request Fiori Link&apos;), 
	IF( AND(OR(ISPICKVAL( PMC_SS_ApprovalStatus__c, &apos;Final Approved&apos;),ISPICKVAL( PMC_SS_ApprovalStatus__c, &apos;Auto Approved&apos;)),ISPICKVAL( PMC_SS_ActionReason__c , &apos;Cancel&apos;)), HYPERLINK($Label.PMC_SS_SAPFioriCancelLink,&apos;Cancel Fiori Link&apos;  ),
		IF( AND(OR(ISPICKVAL( PMC_SS_ApprovalStatus__c, &apos;Final Approved&apos;),ISPICKVAL( PMC_SS_ApprovalStatus__c, &apos;Auto Approved&apos;)),ISPICKVAL( PMC_SS_ActionReason__c , &apos;Credit&apos;)), HYPERLINK($Label.PMC_SS_SAPFioriCreditLink,&apos;Credit Fiori Link&apos; ),
			IF( ISPICKVAL( PMC_SS_ActionReason__c , &apos;Debit&apos;), HYPERLINK($Label.PMC_SS_SAPFioriDebitLink,&apos;Debit Fiori Link&apos; ),
				IF( AND(OR(ISPICKVAL( PMC_SS_ApprovalStatus__c, &apos;Final Approved&apos;),ISPICKVAL( PMC_SS_ApprovalStatus__c, &apos;Auto Approved&apos;)),ISPICKVAL( PMC_SS_ActionReason__c , &apos;Rebill&apos;)), HYPERLINK($Label.PMC_SS_SAPFioriRebillLink,&apos;Rebill Fiori Link&apos;),
					IF( AND(OR(ISPICKVAL( PMC_SS_ApprovalStatus__c, &apos;Final Approved&apos;),ISPICKVAL( PMC_SS_ApprovalStatus__c, &apos;Auto Approved&apos;)),ISPICKVAL( PMC_SS_ActionReason__c , &apos;Return&apos;)), HYPERLINK($Label.PMC_SS_SAPFioriReturnLink,&apos;Return Fiori Link&apos;),
						IF( AND(OR(ISPICKVAL( PMC_SS_ApprovalStatus__c, &apos;Final Approved&apos;),ISPICKVAL( PMC_SS_ApprovalStatus__c, &apos;Auto Approved&apos;)),ISPICKVAL( PMC_SS_ActionReason__c , &apos;Reverse Shipment&apos;)), HYPERLINK($Label.PMC_SS_SAPFioriReverseShipmentLink,&apos;Reverse Shipment Fiori Link&apos;),
							IF( AND(NOT(ISBLANK(ParentId)), ISPICKVAL( Type , &apos;Internal&apos;),ISPICKVAL( PMC_SS_IssueReason__c , &apos;Stock Out / Plant Outage&apos;)), HYPERLINK($Label.PMC_SS_SAPFioriStockOutageLink,&apos;Stock Out / Plant Outage Fiori Link&apos;),
									&apos;&apos;
									)
							)
						)		
					)
				)
			)
		)
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiori Connection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_HyperLink__c</fullName>
        <defaultValue>$Label.PMC_SS_CaseCreate_FloriLink</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>HyperLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PMC_SS_IncidentDate__c</fullName>
        <description>Record the date of quality occurrence.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Incident Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_IncidentFrequency__c</fullName>
        <description>How often this Case has occurred with any customer in “recent history” (~2 years)</description>
        <label>Incident Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st Occurrence</fullName>
                </value>
                <value>
                    <fullName>2nd Occurrence</fullName>
                </value>
                <value>
                    <fullName>More than 2 Occurrences</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_IncidentProbability__c</fullName>
        <description>Likelihood that the Case will have an identified effect</description>
        <label>Incident Probability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Likely</fullName>
                </value>
                <value>
                    <fullName>Not Likely</fullName>
                </value>
                <value>
                    <fullName>Very Likely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_IncidentQuantity__c</fullName>
        <description>Impact on Supply Tonnage</description>
        <label>Incident Quantity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 – 100 tons</fullName>
                </value>
                <value>
                    <fullName>100 – 300 tons</fullName>
                </value>
                <value>
                    <fullName>1000 – 3000 tons</fullName>
                </value>
                <value>
                    <fullName>Greater than 3000 tons</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_IncidentSeverity__c</fullName>
        <description>Estimated financial loss</description>
        <label>Incident Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$0 - $1,000</fullName>
                </value>
                <value>
                    <fullName>$1,001 - $5,000</fullName>
                </value>
                <value>
                    <fullName>$5,001 - $15,000</fullName>
                </value>
                <value>
                    <fullName>$15,001 - $25,000</fullName>
                </value>
                <value>
                    <fullName>$25,001 - $50,000</fullName>
                </value>
                <value>
                    <fullName>More than $50,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_IncidentTonsK1K2__c</fullName>
        <description>Enter portion of K1 shipments represented in Incident Quantity field as whole number percentage</description>
        <label>Incident Tons K1% / K2%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_SS_InternalExternalImpact__c</fullName>
        <label>Internal / External Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_InvoiceDifference__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Invoice Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>PMC_CPQ_Invoice__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_IsCaseOwnerManager__c</fullName>
        <formula>$User.Id = Owner:User.PMC_SS_DelegateUser__c &amp;&amp;  TODAY() &gt;=  Owner:User.PMC_SS_OutOfOfficeStartDate__c &amp;&amp;  TODAY() &lt;= Owner:User.PMC_SS_OutOfOfficeEndDate__c &amp;&amp;  NOT(ISBLANK(Owner:User.PMC_SS_OutOfOfficeStartDate__c)) &amp;&amp; NOT(ISBLANK(Owner:User.PMC_SS_OutOfOfficeEndDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Case Owner Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_IsProductUsable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Toggle box checked when product is accepted as usable by the customer with or without quality mitigation</description>
        <label>Is Product Usable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_IssueReason__c</fullName>
        <description>Specifies the reason of the issue</description>
        <inlineHelpText>Contract Cancellation, Product request, Credit Request, Financial Solution and Anticipated Billing are for Brazil users ONLY</inlineHelpText>
        <label>Issue Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Account Issues</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Article Request</fullName>
                </value>
                <value>
                    <fullName>Call by Date</fullName>
                </value>
                <value>
                    <fullName>Cambio Exhange</fullName>
                </value>
                <value>
                    <fullName>Change to loading priorities</fullName>
                </value>
                <value>
                    <fullName>Consignment</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                    <label>Contract Cancellation</label>
                </value>
                <value>
                    <fullName>Credit Note Request</fullName>
                </value>
                <value>
                    <fullName>Credit Request</fullName>
                </value>
                <value>
                    <fullName>Data Entry</fullName>
                </value>
                <value>
                    <fullName>Debit Note Request</fullName>
                </value>
                <value>
                    <fullName>Delivery Delay</fullName>
                </value>
                <value>
                    <fullName>Demurrage</fullName>
                </value>
                <value>
                    <fullName>Diversion</fullName>
                </value>
                <value>
                    <fullName>Document Request</fullName>
                </value>
                <value>
                    <fullName>Donation Order/Bonus</fullName>
                </value>
                <value>
                    <fullName>Driver Verification/Change</fullName>
                </value>
                <value>
                    <fullName>Equipment Failure</fullName>
                </value>
                <value>
                    <fullName>Export Documentation</fullName>
                </value>
                <value>
                    <fullName>Export prioritization</fullName>
                </value>
                <value>
                    <fullName>Financial Solution</fullName>
                </value>
                <value>
                    <fullName>Include Script CIF</fullName>
                </value>
                <value>
                    <fullName>Incorrect Destination</fullName>
                </value>
                <value>
                    <fullName>Incorrect Label</fullName>
                </value>
                <value>
                    <fullName>Incorrect Product</fullName>
                </value>
                <value>
                    <fullName>Incorrect UOM</fullName>
                </value>
                <value>
                    <fullName>Incorrect Vehicle ID</fullName>
                </value>
                <value>
                    <fullName>IntelliTrans</fullName>
                </value>
                <value>
                    <fullName>Invoice Adjustments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_LoadingDate__c</fullName>
        <description>Date affected load was loaded.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loading Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location</description>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Cases (Location)</relationshipLabel>
        <relationshipName>Cases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_LostRevenueDetail__c</fullName>
        <label>Lost Revenue Detail</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cancel &amp; Rebill Delta</fullName>
                </value>
                <value>
                    <fullName>Failed Delivery</fullName>
                </value>
                <value>
                    <fullName>Missed Orders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_LostRevenueLevel1__c</fullName>
        <inlineHelpText>To total Lost Revenue to Parent Quality and Non-Quality</inlineHelpText>
        <label>Lost Revenue Level 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_LostRevenueLevel2__c</fullName>
        <inlineHelpText>To total Lost Revenue to Child Quality and Non-Quality</inlineHelpText>
        <label>Lost Revenue Level 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_LostRevenueLevel3__c</fullName>
        <label>Lost Revenue Level 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Lot__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lot</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_MDMStatus__c</fullName>
        <label>MDM Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting for Customer Form Completion</fullName>
                </value>
                <value>
                    <fullName>Waiting for Master Data Management</fullName>
                </value>
                <value>
                    <fullName>Waiting for Product Form Completion</fullName>
                </value>
                <value>
                    <fullName>Waiting for Product Costing Setup</fullName>
                </value>
                <value>
                    <fullName>Waiting for Product Routing Creation and Assignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_MOT__c</fullName>
        <description>The mode of transportation for a shipping case</description>
        <label>Mode of Transportation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Barge</fullName>
                </value>
                <value>
                    <fullName>Container</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
                <value>
                    <fullName>Truck</fullName>
                </value>
                <value>
                    <fullName>Vessel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_MasterDataRejectionDetails__c</fullName>
        <description>Reason why it was rejected should be on the task - Pull the information from the  Master Data Rejection Details onto the task</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Master Data Rejection Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_SS_MilestoneIsNearby__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone Is Nearby</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_MilestoneIsViolated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>it will be checked when the first contact milestone is missed</description>
        <label>Milestone Is Violated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ModeofTransportation__c</fullName>
        <label>Mode of Transportation Do Not Use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Barge</fullName>
                </value>
                <value>
                    <fullName>Container</fullName>
                </value>
                <value>
                    <fullName>Inventory Transfer</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
                <value>
                    <fullName>Truck</fullName>
                </value>
                <value>
                    <fullName>Vessel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_NationalDirector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_NewContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases (New Contract)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_NewDestinationLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Location Object displayed when Issue Reason selected is &quot;Incorrect Destination&quot; or &quot;Diversion&quot;. User must select either New Destination (Location) or New Destination (Ship To) but cannot select both.</description>
        <label>New Destination(Location)</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Cases (New Destination(Location))</relationshipLabel>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_NewDestinationShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account Object displayed when Issue Reason selected is &quot;Incorrect Destination&quot; or &quot;Diversion&quot;. User must select either New Destination (Location) or New Destination (Ship To) but cannot select both.</description>
        <label>New Destination(Ship To)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (New Destination(Ship To))</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Nitrogen__c</fullName>
        <description>Percent of Nitrogen to blend</description>
        <label>Nitrogen %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Offspec_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offspec Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_OperationsReportable__c</fullName>
        <description>Picklist to determine if quality case will be reportable towards a Mosaic Production Facility and will be counted as an “Operations Caused” quality case on monthly scorecards</description>
        <label>Operations Reportable?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_OrderClassification__c</fullName>
        <inlineHelpText>This field indicates whether a New Order was created in SAP or if the existing Order in SAP was updated.</inlineHelpText>
        <label>Order Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Order</fullName>
                </value>
                <value>
                    <fullName>Updated Order</fullName>
                </value>
                <value>
                    <fullName>No Order Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Link to Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_OrderSummary__c</fullName>
        <description>Specifies the Order Summary that was entered when the case was created</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Summary</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the look-up to the Order record against which the case is being created</description>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_OriginalContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_OriginalInvoiceAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Original Invoice Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_OriginalWeight__c</fullName>
        <description>Field displayed when Issue Reason selected is &apos;Weight Discrepancy&apos; or &apos;Missing Cargo&apos; to input the original weight of the product.</description>
        <label>Original Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_OtherAtFaultParty__c</fullName>
        <description>Field to add other at fault party.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Other At Fault Party</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_OtherIssueReason__c</fullName>
        <description>Specifies the other issue reason.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Issue Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_OtherReOpenReason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Re-Open Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_SS_OwnerOOO__c</fullName>
        <formula>Owner:User.PMC_SS_OutOfOffice__c</formula>
        <label>Owner OOO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_OwnersCountry__c</fullName>
        <formula>Owner:User.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner’s Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_PGIDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PGI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Packing_Sent_to_Analysis__c</fullName>
        <label>Packing Sent to Analysis?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_PaymentRequestType__c</fullName>
        <label>Payment Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Check Request</fullName>
                </value>
                <value>
                    <fullName>On Account</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_Phosphorous__c</fullName>
        <description>Percent of Phosphorous to blend</description>
        <label>Phosphorous %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Plant__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_PointofFailureSubCategory__c</fullName>
        <label>Point of Failure Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Dismissed or None</fullName>
                </value>
                <value>
                    <fullName>Operations Material Handling</fullName>
                </value>
                <value>
                    <fullName>Operations Production</fullName>
                </value>
                <value>
                    <fullName>Supply Chain Warehousing</fullName>
                </value>
                <value>
                    <fullName>Transportation Mosaic</fullName>
                </value>
                <value>
                    <fullName>Transportation Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>